welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:9: error: expected start of definition
override def run() {
         ^PictureMono:14: error: Unmatched closing brace '}' ignored here
}
^