welcome.lessons.welcome.methods.picture.PictureMono.scala.code
def faireV() {
	avance(); baisseBrosse(); leveBrosse(); avance(); gauche(); avance();
	baisseBrosse(); leveBrosse(); gauche(); avancer(); avancer(); 
	baisseBrosse(); leveBrosse(); droite(); avance(); droite(); }
}


override def run() {
for (i <- 1 to 5) { faireV(); }
}
